# tiny_game_engine

./: .gitignore  CMakeLists.txt  ECS  README.md  main.cpp
src/: CollisionEngine.cpp  CollisionEngine.hpp  EcsComponent.cpp  EcsComponent.hpp  EcsCore.cpp  EcsCore.hpp  EcsEntity.hpp  EcsInteraction.cpp  EcsInteraction.hpp  EcsSystem.cpp  EcsSystem.hpp  Position.hpp  UtilsComponent.hpp  utils.hpp
src/Math/: Sphere.cpp  Sphere.hpp  Vector3.cpp  Vector3.hpp  common.hpp
